Push some changes to fix things.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -74,6 +74,7 @@
     --color-blue60: @accent !important;
     --color-red50: @peach !important;
 
+    --color-gray50: @subtext0 !important; // press caption source
     // "NEW" badge
     --col-yellow-50: @accent !important; // sidemenu badge bg
     --col-yellow-100: @base !important; // sidemenu badge text
@@ -209,7 +210,7 @@
       background-color: fade(@accent, 30%) !important;
     }
 
-    --sds-color-border-01: @surface0 !important;
+    --sds-color-border-01: @overlay0 !important;
     --sds-color-border-accent-01: @accent !important;
     --sds-color-palette-gray-40: @text !important;
     --sds-color-palette-gray-60: @accent !important;
@@ -233,6 +234,20 @@
     --sds-color-text-on-dark-01: @text !important;
     --sds-color-text-success: @green !important;
 
+    #more-results {
+      &:hover {
+        background-color: @surface1 !important;
+      }
+
+      &:active,
+      &:focus {
+        background-color: @surface2 !important;
+      } // animated ellipsis
+      .QZ87yINohPdwJ7OEmx1g {
+        filter: @text-filter !important;
+      }
+    }
+
     --search-loop-color:  !important;
     --search-loop-color--active:  !important;
     --searchbox-icon--default:  !important;
@@ -254,7 +269,9 @@
     --theme-ai-home-cta-border:  !important;
     --theme-ai-home-cta-container-bg:  !important;
 
-    .search--home, .search--header, .search--adv {
+    .search--home,
+    .search--header,
+    .search--adv {
       background-color: @surface0 !important;
       border-color: @overlay0 !important;
       box-shadow: none !important;
@@ -263,7 +280,9 @@
         background-color: @surface1 !important;
       }
 
-      &:active, &:focus, &:focus-within {
+      &:active,
+      &:focus,
+      &:focus-within {
         background-color: @surface2 !important;
         border-color: @accent !important;
       }
@@ -349,7 +368,7 @@
       #bc4726
     );
     --theme-bg-home: @base !important;
-    --theme-bg-press-materials: @accent !important;
+    --theme-bg-press-materials: @mantle !important;
     --theme-bg-home-bottom: @mantle !important;
     --theme-bg-home-dialog-install-overlay: fade(@accent, 30%) !important;
     --theme-bg-home-error:  !important;
@@ -541,7 +560,16 @@
     --theme-col-txt-card: @text !important;
     --theme-col-txt-card-body: @text !important;
     --theme-col-txt-card-body-light: @text !important;
-    --theme-col-txt-card-title: @text;
+
+    --theme-col-txt-card-title: @text !important;
+    .ia-module--definitions,
+    .ia-module--definitions .module--definitions__definition,
+    .ia-module--definitions .module--definitions__pronunciation,
+    .ia-module--definitions .module--definitions__part-of-speech,
+    .ia-module--definitions .module__title {
+      color: @text !important;
+    }
+
     --theme-col-txt-msg: @text !important;
     --theme-col-txt-page-separator: @text !important;
     --theme-col-txt-qna-details: @subtext0 !important;
@@ -760,19 +788,32 @@
       }
     }
 
+    .related-searches__title-long,
+    .related-searches__title-short {
+      color: @subtext0 !important;
+
+      b {
+        color: @text !important;
+      }
+    }
+
     a:not(
       .cta-cards_button__1dD9t,
       .download-cta-section_setAsDefaultButton__x1tIX,
       .button_button__GGtY1,
       .button_primary__bqhFV,
-      .button_size-xl__6ZhE1
+      .button_size-xl__6ZhE1,
+      .TQFs9yvBgnOz3EeEI5OL.TQFs9yvBgnOz3EeEI5OL,
+      [href="https://duckduckgo.com/updates"]
     ),
     a:not(
       .cta-cards_button__1dD9t,
       .download-cta-section_setAsDefaultButton__x1tIX,
       .button_button__GGtY1,
       .button_primary__bqhFV,
-      .button_size-xl__6ZhE1
+      .button_size-xl__6ZhE1,
+      .TQFs9yvBgnOz3EeEI5OL.TQFs9yvBgnOz3EeEI5OL,
+      [href="https://duckduckgo.com/updates"]
     ):link {
       color: @blue;
 
@@ -789,8 +830,16 @@
       }
     }
 
-    body, content, content p {
+    body,
+    content,
+    content p {
       color: @text !important;
+    }
+
+    .newsletter_hero__j3WeG
+      .newsletter_illustration__UNcxq
+      .newsletter_city__3vJSi {
+      filter: @accent-filter !important;
     }
 
     .newsletter_testimonials__lmZAW
@@ -815,9 +864,27 @@
         background-color: darken(@accent, 5%) !important;
       }
 
-      &:active, &:focus {
+      &:active,
+      &:focus {
         color: @base !important;
         background-color: darken(@accent, 10%) !important;
+      }
+    }
+
+    .BgZIarEVpVjvqlrKFRNW {
+      background-color: @surface1 !important;
+
+      &:hover {
+        background-color: @surface2 !important;
+      }
+
+      &:active,
+      &:focus {
+        background-color: @overlay0 !important;
+      }
+
+      &[aria-checked="true"] {
+        background-color: fade(@accent, 30%) !important;
       }
     }
 
@@ -971,7 +1038,11 @@
       }
     }
 
-    .btn {
+    .btn,
+    .ffON2NH02oMAcqyoh2UU.WktWJWUFfihMbuzAEqk2,
+    .VYRn0PqcTApLnWYi0GKA
+      .qVcwmKAeI6lHWhM7wALj:not(.S7StsfQcoxGkCWyEX7qT)
+      button {
       color: @text !important;
       background-color: @surface0 !important;
 
@@ -979,7 +1050,8 @@
         background-color: @surface1 !important;
       }
 
-      &:active, &:focus {
+      &:active,
+      &:focus {
         background-color: @surface2 !important;
       }
 
@@ -991,7 +1063,8 @@
           background-color: @surface1 !important;
         }
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
           background-color: @surface2 !important;
         }
       }
@@ -1004,7 +1077,8 @@
           background-color: darken(@accent, 5%) !important;
         }
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
           background-color: darken(@accent, 10%) !important;
         }
       }
@@ -1017,7 +1091,8 @@
           background-color: darken(@accent, 5%) !important;
         }
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
           background-color: darken(@accent, 10%) !important;
         }
       }
@@ -1030,9 +1105,17 @@
           background-color: @surface1 !important;
         }
 
-        &:active, &:focus {
+        &:active,
+        &:focus {
           background-color: @surface2 !important;
         }
+      }
+    }
+
+    button[data-selected="true"],
+    .Pd_jmhkZzftl0UtTaw0u.GKc_eKgHSpzA6I822ZzJ.psDgU_q8hQhT1iYybkJA.U4eOEk4P8MbERrapKaKh.wZ4JdaHxSAhGy1HoNVja.d26Geqs1C__RaCO7MUs2 {
+      svg path {
+        color: @base !important;
       }
     }
 
@@ -1590,7 +1673,11 @@
     .module__footer,
     .js-settings-dropdown-reset-appearance,
     .modal--dropdown--settings .settings-dropdown--button,
-    .settings-page-wrapper a:not(.btn, .set-tab),
+    .settings-page-wrapper
+      a:not(
+        .btn,
+        .set-tab
+      ),
     .module__link--blue,
     .place-list-item__cta-item__text {
       color: @blue !important;
@@ -1663,8 +1750,7 @@
     .header-wrap,
     .module--carousel__left,
     .module--carousel__right,
-    .detail,
-    .btn {
+    .detail {
       background-color: @mantle;
     }
 
@@ -1798,10 +1884,6 @@
       border-color: @accent !important;
     }
 
-    #more-results {
-      background-color: @surface0 !important;
-    }
-
     .zci--airlines .text--title svg path {
       fill: @text;
     }
@@ -1818,7 +1900,8 @@
         background-color: @surface1 !important;
       }
 
-      &:active, &:focus {
+      &:active,
+      &:focus {
         background-color: @surface2 !important;
       }
 
@@ -1952,6 +2035,16 @@
       background-color: @overlay0;
     }
 
+    .j6hSkc_OS9eSkJJhmg4s
+      .TUkxy_Vey6TzFVe4z5RP
+      .rDA3r_kxKdSvH9yHHJvX
+      .aFoyJq8Kti5EhcPz4iD8
+      img {
+      @svg: escape(
+        '<svg fill="none" viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg"><path fill="@{teal}" d="M73.327 51c1.56 0 3.007-.897 3.502-2.376A22.6 22.6 0 0 0 78 41.444C78 27.392 65.016 16 49 16h-4v.24c-14.123 1.71-25 12.342-25 25.204 0 8.33 4.563 15.726 11.617 20.368.845.556 1.14 1.672.615 2.533L28.169 71H25.5v3h4q.197-.002.404-.05c4.6-1.07 12.342-2.953 19.432-5.057 1.123-.334 1.92-1.306 2.185-2.447C53.582 57.594 61.52 51 71 51z"/><path fill="@{green}" d="M71.885 51A22.7 22.7 0 0 0 74 41.444C74 27.392 61.016 16 45 16S16 27.392 16 41.444c0 8.33 4.563 15.726 11.617 20.368.845.556 1.14 1.672.615 2.533l-4.248 6.957c-.824 1.35.37 3.009 1.92 2.648 5.843-1.36 16.758-4.03 24.964-6.802.335-.113.581-.397.662-.742C53.606 57.575 61.535 51 71 51z"/><path fill="@{text}" d="M92.501 59c.298 0 .595.12.823.354.454.468.454 1.23 0 1.698l-2.333 2.4a1.145 1.145 0 0 1-1.65 0 1.227 1.227 0 0 1 0-1.698l2.333-2.4c.227-.234.524-.354.822-.354zm-1.166 10.798h3.499c.641 0 1.166.54 1.166 1.2s-.525 1.2-1.166 1.2h-3.499c-.641 0-1.166-.54-1.166-1.2s.525-1.2 1.166-1.2m-1.982 8.754c.227-.234.525-.354.822-.354h.006c.297 0 .595.12.822.354l2.332 2.4c.455.467.455 1.23 0 1.697a1.145 1.145 0 0 1-1.65 0l-2.332-2.4a1.227 1.227 0 0 1 0-1.697"/><rect width="32" height="32" x="55" y="55" fill="@{peach}" rx="16"/><path fill="@{surface0}" fill-rule="evenodd" d="M71 57.044c-7.708 0-13.956 6.248-13.956 13.956S63.292 84.956 71 84.956 84.956 78.707 84.956 71c0-7.708-6.249-13.956-13.956-13.956M58.956 71c0-6.652 5.392-12.044 12.044-12.044 6.651 0 12.044 5.392 12.044 12.044 0 5.892-4.232 10.796-9.822 11.84-1.452-3.336-2.966-7.33-1.485-7.772-1.763-3.18-1.406-5.268 2.254-4.624h.005c.41.047.721.082.818.02.496-.315.189-7.242-4.114-8.182-3.96-4.9-7.73.688-5.817.306 1.529-.382 2.665-.03 2.612-.014-6.755.852-3.614 11.495-1.88 17.369a83 83 0 0 1 .606 2.116c-4.275-1.85-7.265-6.105-7.265-11.059" clip-rule="evenodd"/><path fill="@{green}" d="M76.29 81.09c-.043.274-.137.457-.306.482-.319.05-1.747-.278-2.56-.587-.092.425-2.268.827-2.613.257-.79.682-2.302 1.673-2.619 1.465-.605-.396-1.175-3.45-.72-4.096.693-.63 2.15.055 3.171.417.347-.586 2.024-.808 2.372-.327.917-.697 2.448-1.68 2.597-1.501.745.897.839 3.03.678 3.89"/><path fill="@{yellow}" fill-rule="evenodd" d="M68.53 71.87c.311-2.216 4.496-1.523 6.368-1.772a12 12 0 0 0 3.05-.755c1.547-.636 1.811-.005 1.054.985-2.136 2.533-6.889.69-7.74 2-.248.388-.056 1.301 1.899 1.589 2.64.388 4.81-.468 5.079.05-.603 2.764-10.63 1.823-9.712-2.097h.001Z" clip-rule="evenodd"/><path fill="@{base}" d="M73.871 65.48c-.277-.6-1.7-.596-1.972-.024-.025.118.075.087.263.028.331-.104.938-.295 1.636.078.055.024.109-.033.073-.083Zm-6.954.143c-.264-.019-.693-.05-1.048.147-.52.222-.688.46-.788.624-.037.06-.181.054-.181-.017.035-.954 1.653-1.414 2.241-.821.072.089-.033.081-.224.067m6.447 3.199c-1.088-.005-1.088-1.684 0-1.69 1.09.006 1.09 1.685 0 1.69m-5.517-.26c-.021 1.294-1.92 1.294-1.94 0 .005-1.289 1.934-1.288 1.94 0"/><path fill="@{surface0}" fill-rule="evenodd" d="M31 46a5 5 0 1 0 0-10 5 5 0 0 0 0 10m19-5a5 5 0 1 1-10 0 5 5 0 0 1 10 0m14 0a5 5 0 1 1-10 0 5 5 0 0 1 10 0" clip-rule="evenodd"/></svg>'
+      );
+      content: url("data:image/svg+xml,@{svg}");
+    }
     .review__rating-stars,
     .place-list-item__rating__image {
       @svg: escape(
