feat(17track): theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -167,7 +167,7 @@
       background-color: @mantle !important;
 		}
 
-		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button, .text-zinc-900, .text-\[\#09090B\] {
+		.text-white, .text-text-primary, .text-foreground, .text-black, .peer\/menu-button, .text-zinc-900, .text-\[\#09090B\], [data-sidebar="menu-sub-button"] {
 		  color: @text !important;
 		}
 
@@ -175,7 +175,7 @@
 		  color: @base !important;
 		}
 
-		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover {
+		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover {
 		  color: @subtext1 !important;
 		}
 
@@ -193,6 +193,14 @@
 
 		.bg-red-50 {
 			background-color: @red !important;
+		}
+
+		.bg-\[\#FF8C00\] {
+			background-color: @peach !important;
+		}
+
+		.hover\:bg-\[\#FF8C00\]:hover {
+			background-color: @yellow !important;
 		}
 
 		.bg-primary {
