--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -685,6 +685,7 @@
     --theme-legacy-tagline-subtitle:  !important;
     --theme-legacy-tagline-text:  !important;
     --theme-logo-text:  !important;
+    --theme-location-disclaimer-color: @accent !important;
     --theme-modal-bg:  !important;
     --theme-modal-body-bg:  !important;
     --theme-modal-header-bg:  !important;
@@ -1232,6 +1233,10 @@
     .single-column-feature-card-detail-bite_popover__QDo2t {
       color: @base !important;
       background-color: @mauve !important;
+    }
+
+    .subscriptions-layout_card__rW7XD {
+      background-color: fade(@blue, 30%) !important;
     }
 
     .nav-menu__heading {
