feat(17track): some more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -163,7 +163,7 @@
 		  background-color: @crust !important;
 		}
 
-		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover {
+		.hover\:bg-\[\#FAFAFA\]:hover, .hover\:bg-accent:hover, .peer\/menu-button:hover, .peer\/menu-button[data-active="true"], .focus\:bg-accent:hover, .hover\:bg-muted\/50:hover, .bg-\[\#EFF6FF\], [data-sidebar="menu-sub-button"]:hover, ._codeMirror_1mws9_1 .cm-line:nth-child(2n) {
       background-color: @mantle !important;
 		}
 
@@ -175,7 +175,7 @@
 		  color: @base !important;
 		}
 
-		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover {
+		.text-text-secondary, .text-muted-foreground, .hover\:text-accent-foreground:hover, .peer\/menu-button:hover, .data-\[active\=true\]\:text-sidebar-accent-foreground[data-active="true"], .focus\:text-accent-foreground:hover, [data-sidebar="menu-sub-button"]:hover, .cm-gutterElement {
 		  color: @subtext1 !important;
 		}
 
@@ -213,6 +213,15 @@
 			color: @base !important;
 		}
 
+		.ͼ20, .cm-placeholder, [style="color: rgb(161, 161, 170); background-color: rgb(255, 255, 255);"] {
+			background-color: @base !important;
+			color: @text !important;
+		}
+
+		.bg-zinc-400 {
+			background-color: @overlay0 !important;
+		}
+
 		a svg path[fill="white"], a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
 			fill: @base !important;
 		}
@@ -245,7 +254,7 @@
 			fill: @sky !important;
 		}
 
-		svg path[fill="#757575"] {
+		svg path[fill="#757575"], svg path[fill="#919191"] {
 			fill: @subtext1 !important;
 		}
 
@@ -255,6 +264,14 @@
 
 		svg path[fill="#DBDBDB"] {
 		  fill: @base !important;
+		}
+
+		svg path[stroke="#ffffff"] {
+		  stroke: @text !important
+		}
+
+		svg path[stroke="white"] {
+		  stroke: @base !important;
 		}
 
 		img[src*="17track-full-logo.svg"] {
@@ -268,11 +285,11 @@
 			} */
 
 		#paint0_radial_985_7129 stop:first-child {
-      stop-color: @base;
-    }
+			stop-color: @base;
+		}
 
-    #paint1_linear_985_7129 stop:first-child {
-      stop-color: @subtext0;
-    }
-  }
+		#paint1_linear_985_7129 stop:first-child {
+			stop-color: @subtext0;
+		}
+	}
 }
