Better comment for icon filters.
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/git-scm/catppuccin.user.less
+++ b/styles/git-scm/catppuccin.user.less
@@ -99,7 +99,7 @@
       filter: @accent-filter !important;
     }
 
-    // Thank gosh, the icons need to be the same color as the text anyway!
+    // Icons next to text headings are added using a background on the h3 element; filtering the element themes the icon and has no visible changes to text (same color used already).
     #topics-dropdown h3 {
       filter: @text-filter !important;
     }
