Add big batch of vgen work.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/vgen/catppuccin.user.less
+++ b/styles/vgen/catppuccin.user.less
@@ -18,7 +18,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("vgen.co") {
+@-moz-document domain("vgen.co"), domain("vsona.co") {
   :root {
     @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
@@ -30,74 +30,162 @@
   }
 
   #catppuccin(@flavor) {
-    #lib.palette() !important;
-    #lib.defaults() !important;
+    #lib.palette();
+    #lib.defaults();
+
+    *:not(img, svg, video, .notificationDot) {
+      color: @text;
+      fill: @text;
+      stroke: @text;
+      border-color: @overlay0;
+      outline-color: @overlay0;
+    }
+
+    img,
+    svg,
+    video {
+      background-color: transparent !important;
+      border-color: transparent !important;
+    }
+
+    .khYhRB,
+    .filtersBar {
+      background-image: unset !important;
+      background-color: transparent !important;
+    }
+
+    hr, .divider {
+      background-color: @overlay1 !important;
+    }
 
     body,
     content,
     content p {
       color: @text !important;
+      fill: @text !important;
+      stroke: @text !important;
       background-color: @base !important;
+    }
+
+    .hrsGzu,
+    img,
+    video {
+      background-color: transparent !important;
+    }
+
+    .khYhRB,
+    .filtersBar {
+      background-image: unset !important;
+      background-color: transparent !important;
+    }
+
+    hr, .divider {
+      background-color: @overlay1 !important;
     }
 
     .BaseIcon__StyledSvg-sc-6d6731c3-0.bxRwyH {
       fill: @text !important;
+      stroke: @text !important;
     }
 
     .hXZCZF > li > a {
-      svg {
+      :not(button, button *) {
         fill: @subtext0 !important;
-      }
-
-      span {
+        stroke: @subtext0 !important;
         color: @subtext0 !important;
       }
 
-      &:hover {
-        svg {
-          fill: @accent !important;
-        }
-
-        span {
-          color: @accent !important;
-        }
+      &:hover :not(button, button *) {
+        color: @accent !important;
+        fill: @accent !important;
+        stroke: @accent !important;
       }
 
-      &:is(:active, :focus) {
-        svg {
-          fill: darken(@accent, 5%) !important;
+      &:is(:active, :focus):not(button, button *) {
+        color: darken(@accent, 5%) !important;
+        fill: darken(@accent, 5%) !important;
+        stroke: darken(@accent, 5%) !important;
+      }
+    }
+
+    .kUXBIh + .checkbox {
+      background-color: @surface0 !important;
+      border: none !important;
+    }
+
+    .kUXBIh input:checked + .checkbox {
+      background-color: @accent !important;
+    }
+
+    .kUXBIh .checkbox .checkmark path {
+      fill: @base !important;
+      stroke: @base !important;
+    }
+
+    table:not(.lnfAug) {
+      tr {
+        &:nth-child(2n+1) td {
+          background-color: @surface0 !important;
         }
 
-        span {
-          color: darken(@accent, 5%) !important;
+        &:nth-child(2n) td {
+          background-color: @surface1 !important;
+        }
+
+        &:hover td {
+          background-color: @surface2 !important;
         }
       }
     }
 
-    * {
-      border-color: @overlay0 !important;
+    // deno-fmt-ignore
+    svg.blurredBubble foreignObject div {
+      filter: @surface0-filter !important;
     }
 
-    .ryjpw {
+    // INHERIT BG SECTIONS
+    .dKBVwa {
+      background-color: inherit !important;
+    }
+
+    // SURFACE0 SECTIONS
+    .ljJZpn,
+    .iFmoSC,
+    .jPgPNs,
+    .menuContainer .contentSections,
+    .hpNMkG,
+    .dATwxN,
+    .iEvEYV .sectionContainer,
+    .fidNsT,
+    .kCEjMk,
+    .kfJXRP,
+    .backgroundContainer > .innerMedia,
+    .dIMOSn,
+    .serviceBody,
+    .serviceBody .infoContainer,
+    .cQAcLF .str-chat__channel-list,
+    .ryjpw,
+    .kiBQyr,
+    .grSsYu {
       background-color: @surface0 !important;
     }
 
-    .kiBQyr {
-      background-color: @surface0 !important;
-    }
-
-    .frEZkH {
-      .str-chat__main-panel,
-      .str-chat__list,
-      .str-chat__message-input {
-        background-color: @surface0 !important;
-      }
-
-      .sendButton {
-        background-color: @green !important;
-      }
-    }
-
+    // SURFACE1 SECTIONS
+    .gRqLQd,
+    .mainModalContent .conceptDetailsColumn,
+    .characterCard,
+    .cKOpZR .overlay,
+    .dIMOSn .mainModalContent .textContainer,
+    .iqrfrm,
+    .dEBJKf,
+    .finalDeliveryMessage,
+    .formattedFilesList,
+    .mainModalContent .serviceInputColumn .inputGroup,
+    .hgCHCl .licenseSection,
+    .bSa-Dux,
+    .hSBLEI,
+    .cHhgNN .galleryItem,
+    .fOwIjP .innerOptionDescriptionContent,
     .str-chat__reaction-selector .str-chat__message-reactions-options,
     .str-chat__message-reaction-selector
       .str-chat__message-reactions-options
@@ -117,40 +205,357 @@
       background-color: @surface1 !important;
     }
 
+    // SURFACE2 SECTIONS
+    .CharacterConceptAdvancedInfo__CollapsableDisplaySectionContainer-sc-7bc055a2-0,
+    .introductionContainer .introductionTextWrapper,
+    .kxjzkn .serviceBody,
     .str-chat__message-reaction-selector
       .str-chat__message-reactions-options
       .str-chat__message-reactions-option:hover {
       background-color: @surface2 !important;
     }
 
-    .str-chat__message.str-chat__message--me .str-chat__message-bubble {
-      background-image: linear-gradient(45deg, @green, @teal) !important;
+    // BASE SECTIONS
+    .jJGjin {
+      background-color: @base !important;
     }
 
+    // MANTLE SECTIONS
+    .mainContent,
+    .lgEpwA,
+    .kbXrba .mainModalContent .commissionSideColumn .userInfoGroup,
+    .iEvEYV .taggedCharactersSection {
+      background-color: @mantle !important;
+    }
+
+    // GRADIENT ELEMENTS
+    .iOtNJw.notistack-MuiContent,
+    .bsGOTS {
+      color: @base !important;
+      background-image: linear-gradient(
+        225deg,
+        @blue 0%,
+        @mauve 53.65%,
+        @red 100%
+      ) !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // ACCENT ELEMENTS
+    .bjjDub,
+    .bFXMKY .mainContentContainer > .mainContent .bannerContainer .statusBanner,
+    .filtersContainer .filterMenuLink.active,
+    .fexemQ .badge {
+      color: @base !important;
+      background-image: unset !important;
+      background-color: @accent !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // RED ELEMENTS
+    .eZqQts,
+    .kLhqfT .innerColour,
+    .iOtNJw.notistack-MuiContent-error,
+    .eksQAu,
+    .efHLBf {
+      background-image: unset !important;
+      background-color: @red !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // YELLOW ELEMENTS
+    .jIZCAk {
+      background-image: unset !important;
+      background-color: @yellow !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // PEACH ELEMENTS
+    .cGsYNF,
+    .hLuxbv,
+    .igoiuH {
+      background-image: unset !important;
+      background-color: @peach !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // GREEN ELEMENTS
+    .eINUqO > .formLabel .formField,
+    .eoQLjX,
+    .iOtNJw.notistack-MuiContent-success,
+    .kOqwgf,
+    .kXscRl,
+    .kAhkUO,
+    .jXnwLz {
+      color: @base !important;
+      background-image: unset !important;
+      background-color: @green !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    // SUBTEXT0 ELEMENTS - MISC.
+    svg[fill="var(--theme-GRAY-DARKER)"] *,
+    svg[fill="var(--theme-BLACK-LIGHTEST-2)"] * {
+      fill: @subtext0 !important;
+    }
+
+    // RED ELEMENTS - MISC.
+    .cCRYsl {
+      color: @red !important;
+    }
+
+    svg[fill="var(--theme-ERROR)"] * {
+      fill: @red !important;
+    }
+
+    // GREEN ELEMENTS - MISC.
+    svg[fill="var(--theme-SUCCESS-NEON)"] * {
+      fill: @green !important;
+    }
+
+    // FADED ELEMENTS
+    .jTwCSW {
+      background-color: fade(@overlay2, 30%) !important;
+    }
+
+    // OVERRIDES - MISC.
+    .eINUqO > .formLabel .downArrow *,
+    .hLuxbv :is(.alertMessageTextContainer, .alertMessageIconContainer) * {
+      color: @base !important;
+      fill: @base !important;
+      stroke: @base !important;
+    }
+
+    .iFmoSC .tooltipArrow {
+      * {
+        fill: @surface0 !important;
+        stroke: @surface0 !important;
+      }
+    }
+
+    .ccZQfx
+      .headerContentContainer
+      .headerContent
+      .right
+      .notificationButtonContainer.notificationMenuOpen {
+      outline-color: @accent !important;
+    }
+
+    .notificationDot {
+      border-color: transparent !important;
+    }
+
+    // GREY BADGES
+    .gLdYsr,
+    .fGhAij .badge {
+      background-color: @surface1 !important;
+    }
+
+    // BUTTONS
+    .dgAcRG,
+    .kagxcm .filtersContainer .filterMenuLink,
+    :not(.str-chat__message-reaction) > button {
+      color: @text !important;
+      background-image: unset !important;
+      background-color: @surface0 !important;
+
+      &:hover {
+        background-color: @surface1 !important;
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+    }
+
+    /**
+     * FIXME: .cUpKKJ seems to be refusing to change.
+     * .cUpKKJ.RichTextEditor__EditorContainer_<hash>-5
+     * └ .innerEditor
+     *   └ .editableContainer
+     */
+
+    // TEXTAREAS
+    .cUpKKJ,
+    .formLabel .formField,
+    .inputContainer,
+    .str-chat__message-textarea-with-emoji-picker,
+    input[type="text"],
+    textarea {
+      color: @text !important;
+      background-color: @surface1 !important;
+
+      label, ::placeholder {
+        color: @subtext0 !important;
+      }
+
+      &:hover, &:active, &:focus-within {
+        background-color: @surface2 !important;
+
+        .cUpKKJ,
+        .formLabel .formField,
+        .inputContainer,
+        .str-chat__message-textarea-with-emoji-picker,
+        input[type="text"],
+        textarea {
+          background-color: @surface2 !important;
+        }
+      }
+    }
+
+    // DROPDOWN CONTAINERS
+    .SortDropdown__FloatingContainer-sc-5d6d1713-3 {
+      background-color: @surface0 !important;
+
+      .SortDropdown__OptionText-sc-5d6d1713-4 {
+        &:hover {
+          background-color: @surface1 !important;
+        }
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+    }
+
+    // SLIDER
+    .slider {
+      background-color: @overlay0 !important;
+
+      .sliderFill {
+        background-color: @accent !important;
+      }
+    }
+
+    .innerSlider .thumb {
+      background-color: @accent !important;
+
+      :not(button, button *) {
+        color: @base !important;
+        fill: @base !important;
+        stroke: @base !important;
+      }
+
+      &::before {
+        border-color: transparent !important;
+      }
+    }
+
+    // CHIP SELECT
+    .inputContainer:has(> label.option + label.option) {
+      color: @subtext0 !important;
+      background-color: @surface1 !important;
+
+      .title {
+        color: @subtext0 !important;
+      }
+
+      label.option {
+        &:hover {
+          background-color: @surface2 !important;
+        }
+
+        &:has(> input[checked]) {
+          background-color: @accent !important;
+
+          :not(button, button *) {
+            color: @base !important;
+            fill: @base !important;
+            stroke: @base !important;
+          }
+        }
+
+        // Weird chips that are multiselect-togglable
+        &.fSGnyo {
+          background-color: darken(@accent, 5%) !important;
+
+          :not(button, button *) {
+            color: @base !important;
+            fill: @base !important;
+            stroke: @base !important;
+          }
+        }
+      }
+    }
+
+    // CHAT SHELL
+    .frEZkH {
+      .str-chat__main-panel,
+      .str-chat__list,
+      .str-chat__message-input {
+        background-color: @surface0 !important;
+      }
+
+      .sendButton {
+        background-color: @green !important;
+      }
+    }
+
+    // THEIR MESSAGES
     .str-chat__message .str-chat__message-bubble {
       background-color: @base !important;
     }
 
-    .str-chat__message .str-chat__message-text {
+    .str-chat__message .str-chat__message-text,
+    .str-chat__message .str-chat__message-text * {
       color: @text !important;
     }
 
-    .str-chat__message.str-chat__message--me .str-chat__message-text {
+    // MY MESSAGES
+    .str-chat__message.str-chat__message--me .str-chat__message-bubble {
+      background-image: linear-gradient(45deg, @green, @teal) !important;
+    }
+
+    .str-chat__message.str-chat__message--me .str-chat__message-text,
+    .str-chat__message.str-chat__message--me .str-chat__message-text * {
       color: @base !important;
     }
 
+    // issue with our colours making things hard to see (span, reaction count)
     .str-chat__message-reaction-count, .cKwqGf {
       font-weight: 600 !important;
     }
 
+    // CHAT METADATA
     .str-chat__message-reaction-count,
-    .str-chat__message .str-chat__message-metadata,
+    .str-chat__message .str-chat__message-metadata *,
     .str-chat__message .str-chat__custom-message-metadata,
     .kiBQyr .str-chat__date-separator .str-chat__date-separator-date,
     .cKwqGf {
       color: @subtext0 !important;
     }
 
+    // CHAT METADATA: COMMISSION EVENTS
     .jXVGTe {
       span {
         color: @subtext0 !important;
@@ -186,30 +591,86 @@
       path,
     .str-chat__message-input .str-chat__file-input-container svg path {
       fill: @subtext0 !important;
+      stroke: @subtext0 !important;
 
       &:hover, &:active, &:focus {
         fill: @text !important;
+        stroke: @text !important;
       }
     }
 
-    .str-chat__message-textarea-with-emoji-picker,
-    input[type="text"],
-    textarea {
-      color: @text !important;
-      background-color: @surface1 !important;
+    // LABELS & LEGENDS & OTHER SUBTLE TEXTS
+    .jivRMW,
+    .fMNUVr .emptyStateContainer .emptyStateText > :is(.title, .description),
+    .cfMzOd,
+    .jxOrZA,
+    .kJsAzt .labelText,
+    .bmISxX,
+    .bdkWir,
+    .kbXrba .mainModalContent .sidePanelSectionHeader {
+      color: @subtext0 !important;
+    }
 
-      &:hover, &:active, &:focus-within {
-        background-color: @surface2 !important;
+    .ewnnA {
+      border-color: @accent !important;
+    }
 
-        input[type="text"], textarea {
-          background-color: @surface2 !important;
-        }
+    .byhiJW {
+      background-color: @mantle !important;
+    }
+
+    // MODAL OVERLAY OVER PAGE BEHIND
+    .ReactModal__Overlay {
+      background-color: fade(@crust, 80%) !important;
+    }
+
+    .conceptsOverview {
+      background-image: unset !important;
+      background-color: @surface0 !important;
+    }
+
+    .characterScreenTabContent {
+      background-image: unset !important;
+      background-color: @base !important;
+    }
+
+    .fUTcNl .characterScreenTab {
+      background-image: unset !important;
+      background-color: @base !important;
+
+      &.inactive {
+        background-color: @surface0 !important;
       }
     }
+
+    // TIP SECTION
+    .pONcl {
+      background-image: linear-gradient(
+        225deg,
+        @blue 0%,
+        @mauve 53.65%,
+        @red 100%
+      ) !important;
+
+      .bWwiRK {
+        border-color: @surface0 !important;
+      }
+
+      .tipHeader, .tipSubHeader, .euofyO, .fHMUjV {
+        color: @base !important;
+      }
+
+      .hQIRpQ > .accordionSectionHeader .directionIcon path,
+      .dJssvN > .accordionSectionHeader .directionIcon path {
+        fill: @base !important;
+        stroke: @base !important;
+      }
+    }
+
+    /// Media Controls
 
     .controlsContainer {
       --control-focus-outline: 2px solid @accent !important;
-      color: @text !important;
     }
 
     .statusOverlay {
@@ -222,8 +683,6 @@
 
     .controlBar > .button {
       background-color: @surface0 !important;
-      fill: @text !important;
-      color: @text !important;
     }
 
     /* Keyboard focus styling for interactive control elements (includes control
@@ -238,10 +697,12 @@
 
     .controlBar > .button:enabled:hover {
       fill: darken(@accent, 5%) !important;
+      stroke: darken(@accent, 5%) !important;
     }
 
     .controlBar > .button:enabled:hover:active {
       fill: darken(@accent, 10%) !important;
+      stroke: darken(@accent, 10%) !important;
     }
 
     .playButton,
@@ -327,7 +788,6 @@
     .statusIcon[type="pictureInPicture"] {
       background-image: url(chrome://global/skin/media/picture-in-picture-open.svg)
         !important;
-      fill: @text !important;
     }
 
     /* Overlay Play button */
@@ -335,7 +795,6 @@
       background-image: url(chrome://global/skin/media/play-fill.svg)
         !important;
       background-color: @surface0;
-      fill: @text !important;
     }
 
     .pictureInPictureOverlay {
